--- a/frameworks/hdfs/universe/config.json
+++ b/frameworks/hdfs/universe/config.json
@@ -11,10 +11,11 @@
           "pattern": "^(\\/?((\\.\\.)|(([a-z0-9]|[a-z0-9][a-z0-9\\-]*[a-z0-9])\\.)*([a-z0-9]|[a-z0-9][a-z0-9\\-]*[a-z0-9]))?($|\\/))+$",
           "default": "hdfs"
         },
-        "user": {
-          "description": "The linux user used to run the scheduler and all executors.",
-          "type": "string",
-          "default": "nobody"
+        "check_for_nobody_leave_unchecked_for_root": {
+          "description": "The user that the service will run as. If checked, the service will run as nobody. If unchecked, the service will run as root.",
+          "type": "boolean",
+          "default": true,
+          "title": "User"
         },
         "service_account": {
           "description": "The service account for DC/OS service authentication. This is typically left empty to use the default unless service authentication is needed. The value given here is passed as the principal of Mesos framework.",
